--- a/style.css
+++ b/style.css
@@ -1,21 +1,36 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: #011f3f;
-  text-align: center;
   font-family: "Press Start 2P", cursive;
   color: #ffdcbe;
 }
 
+h1 {
+  margin-top: 100px;
+  text-align: center;
+  font-size: 50px;
+  clear: both;
+}
+
 .container {
+  margin: 0 auto;
   margin-top: 50px;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
   display: flex;
-  justify-content: center;
+  gap: 15px;
   align-items: center;
   flex-wrap: wrap;
-  gap: 20px;
-  width: 500px;
+  width: 420px;
+}
+
+@media (max-width: 500px) {
+  .container {
+    flex-direction: column;
+  }
 }
 
 .container button {
